--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@ body {
   background-color: #d3d3d345;
 }
 .grid-section {
+  margin: 0 10rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 100px 100px;
@@ -14,6 +15,11 @@ body {
 .twitter-section {
   grid-area: a;
 }
+
+.username-search > * {
+  margin-top: 0.5rem;
+}
+
 .twitter-section > div {
   padding: 1rem 0;
 }
@@ -34,4 +40,28 @@ body {
 
 #moderation-slider:hover {
   cursor: pointer;
+}
+
+.twitter-root-tweet {
+  background-color: #1da1f2a1;
+  padding-left: 1rem !important;
+  padding-top: 0.1rem !important;
+  text-align: center;
+  margin-right: 1rem;
+  border-radius: 1rem;
+  display: none;
+}
+
+.show {
+  display: block !important;
+}
+
+.twitter-reply {
+  background-color: rgb(191, 227, 253);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.reply-header {
+  text-align: center;
 }
